# Eclipse

./: .gitignore  .vercelignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  Makefile  PITCH.md  README.md  competitive_analysis.md  dump-config.ts  fix_msg.sh  fix_rebase.sh  fix_ts.js  grant-application.md  init_repo.sh  package-lock.json  package.json  program-keypair.json  render.yaml  test-pda.ts  test-snapshot.ts  test-tee.ts  test_error.rs  tsconfig.json
.github/workflows/: crank.yml
app/: .env.example  devnet-test.js  next.config.ts  package-lock.json  package.json  simulate-create-market.js  simulate-create-market.ts  tailwind.config.ts  test-atapi.js  test-idl.js  test-tx-add.js  tsconfig.json  vercel.json
docs/: ARCHITECTURE.md  CONFIDENTIAL_PREDICTION_MARKETS_RESEARCH.md  CORE_INTEGRATION.md  FEATURES.md  INDEX.md  MAGICBLOCK_ARCHITECTURE.md  MAGICBLOCK_FEATURES.md  PITCH.md
programs/prediction_market/: Cargo.toml
programs/prediction_market/src/: lib.rs
programs/prediction_market/src/amm/: bonding_curve.rs  mod.rs
programs/prediction_market/src/instructions/: create_private_market.rs  delegate.rs  initialize.rs  mod.rs  private_position.rs  private_rollup.rs
programs/prediction_market/src/state/: config.rs  market.rs  mod.rs  position.rs  private_state.rs  topup_receipt.rs
scripts/: create-dac-spl-mint.ts  create-dark-markets.ts  init-dac-mint.ts  price-market-crank.js  setup-dac-token.ts  update-devnet-collateral-mint.js  update-devnet-oracle.js
tests/: api-smoke.ts  check-ata.ts  debug-config.ts  per-smoke.ts  prediction-market-l1.ts
(+139 files in other folders)
