[package]
name = "prediction_market"
version = "0.1.0"
description = "Permissionless private prediction markets on Solana using MagicBlock / PER"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["metadata"] }

ephemeral-rollups-sdk = { version = "=0.11.0", features = ["anchor", "access-control"] }
magicblock-magic-program-api = "0.8.8"

solana-program = "2.3.0"
bincode = "1.3.3"

[dev-dependencies]
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
